Quase finalizada parte de usuário
Finalizada, até o momento. a parte de usuário. Resta apenas o avatar.
